[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "compose-py"
description = "Python library for parsing and loading Compose files"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = ["pydantic"]

[project.optional-dependencies]
pydantic = [
  "pydantic",
  "pyyaml>=5.1",
]
dataclasses = [
  "dacite>=1.0",
  "pyyaml>=5.1",
]
dev = [
  "black==23.3.0",
  "datamodel-code-generator==0.19.0",
  "flake8==6.0.0",
  "isort==5.12.0",
  "mypy==1.3.0",
  "pysen==0.10.4",
  "types-PyYAML==6.0.12.9",
]

[tool.setuptools]
packages = ["compose_py"]

[tool.setuptools.dynamic]
version = {attr = "compose_py._version.__version__"}
