[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compose-py"
description = "A Python library for parsing and loading Compose files"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
authors = [
  {name = "Yuki Igarashi", email = "me@bonprosoft.com"},
]
requires-python = ">=3.6"
dependencies = [
  "PyYAML>=5.1",
]

[project.urls]
homepage = "https://github.com/bonprosoft/compose-py"
repository = "https://github.com/bonprosoft/compose-py"

[project.optional-dependencies]
pydantic = [
  "pydantic",
]
dataclasses = [
  "dacite>=1.0",
]
dev = [
  "black==23.3.0",
  "datamodel-code-generator==0.19.0",
  "flake8==6.0.0",
  "isort==5.12.0",
  "mypy==1.3.0",
  "pysen==0.10.4",
  "pytest==7.3.1",
  "types-PyYAML==6.0.12.9",
]

[tool.setuptools.packages.find]
exclude = ["build", "tests"]
namespaces = false

[tool.setuptools.package-data]
"compose_py" = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "compose_py._version.__version__"}
